--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "yoyamerch+14@yandex.ru",
-    "password": "miya0528",
+    "email": "",
+    "password": "",
     "2FASecret": "",
     "i_user": "",
     "proxy": ,
