--- a/config.json
+++ b/config.json
@@ -41,15 +41,15 @@
   "timeZone": "Asia/Ho_Chi_Minh",
   "credentials": {
     "gmailAccount": {
-      "email": "cliffbotbeluga@gmail.com",
-      "clientId": "335951889803-q0sqvpqjire12vl0c1drqpvq6trqe7qi.apps.googleusercontent.com",
-      "clientSecret": "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",
-      "refreshToken": "1//04vKSsirtbMjRCgYIARAAGAQSNwF-L9Ir45Y2gJy6rg7wvfCbzF5fTFQxOhV83N6jQC-N5n6S-rNnEUgujiuWu4OvrLEbmELMcSI",
+      "email": "aymiyoy@gmail.com",
+      "clientId": "49265065133-m96coan8c8epqhoq9q63jchr976fj3l3.apps.googleusercontent.com",
+      "clientSecret": "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",
+      "refreshToken": "1//0493OCY_k9JyUCgYIARAAGAQSNwF-L9Ir0zSTxWv4QC_1yttsn6Df8f_9CQG3bTXvmkCGNhVT3tGQQ91NzT1rY6JKfqykasicUXk",
       "apiKey": ""
     },
     "gRecaptcha": {
-      "siteKey": "6LcEPTMpAAAAAKRhQmTp03g4rkq-U6jXs8E8rDf5",
-      "secretKey": "6LcEPTMpAAAAAKRhQmTp03g4rkq-U6jXs8E8rDf5"
+      "siteKey": "6Lcw4ZIpAAAAALdS-HyG94W2F4Gf7MgKswiRBpWo",
+      "secretKey": "6Lcw4ZIpAAAAAH7APjQ_RoU3CI4nhkDlQmOrtyQr"
     }
   },
   "dashBoard": {
