--- a/config.json
+++ b/config.json
@@ -46,7 +46,7 @@
       "clientId": "49265065133-m96coan8c8epqhoq9q63jchr976fj3l3.apps.googleusercontent.com",
       "clientSecret": "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",
       "refreshToken": "1//0493OCY_k9JyUCgYIARAAGAQSNwF-L9Ir0zSTxWv4QC_1yttsn6Df8f_9CQG3bTXvmkCGNhVT3tGQQ91NzT1rY6JKfqykasicUXk",
-      "apiKey": ""
+      "apiKey": "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"
     },
     "gRecaptcha": {
       "siteKey": "6Lcw4ZIpAAAAALdS-HyG94W2F4Gf7MgKswiRBpWo",
